--- a/account_project/templates/account_project/base.html
+++ b/account_project/templates/account_project/base.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="{% static 'account/css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'account_project/css/base.css' %}">
 </head>
 <body>
   <div id="header">
@@ -15,7 +15,7 @@
     {% if request.user.is_authenticated %}
       <ul class="menu">
         <li {% if section == "dashboard" %} class="selected" {% endif %}>
-          <a href="{% url 'account:dashboard' %}">My dashboard</a>
+          <a href="{% url 'account_project:dashboard' %}">My dashboard</a>
         </li>
         <li {% if section == "images" %} class="selected" {% endif %}>
           <a href="#">Images</a>
@@ -29,9 +29,9 @@
     <span class="user">
       {% if request.user.is_authenticated %}
         Hello {{ request.user.first_name }}
-        <a href="{% url 'account:logout' %}">Logout</a>
+        <a href="{% url 'account_project:logout' %}">Logout</a>
       {% else %}
-        <a href="{% url 'account:login' %}">Log-in</a>
+        <a href="{% url 'account_project:login' %}">Log-in</a>
       {% endif %}
     </span>
   </div>
