--- a/account_project/templates/registration/logged_out.html
+++ b/account_project/templates/registration/logged_out.html
@@ -1,4 +1,4 @@
-{% extends 'account/base.html' %}
+{% extends 'account_project/base.html' %}
 
 {% block title %}Logged out{% endblock %}
 
@@ -6,7 +6,7 @@
   <h1>Logged out</h1>
   <p>
     You have been successfully logged out.
-    You can <a href="{% url 'account:login' %}">Log-in again</a>
+    You can <a href="{% url 'account_project:login' %}">Log-in again</a>
   </p>
 {% endblock content %}
   
