--- a/account_project/templates/registration/password_reset_confirm.html
+++ b/account_project/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends 'account/base.html' %}
+{% extends 'account_project/base.html' %}
 
 {% block title %}Reset your password{% endblock %}
 
