--- a/images/templates/images/image/create.html
+++ b/images/templates/images/image/create.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "account_project/base.html" %}
 
 {% block title %}Bookmark an image{% endblock %}
 
@@ -10,3 +10,4 @@
     {% csrf_token %}
     <input type="submit" value="Bookmark">
   </form>
+{% endblock %}
