--- a/account_project/templates/account_project/base.html
+++ b/account_project/templates/account_project/base.html
@@ -18,10 +18,10 @@
           <a href="{% url 'account_project:dashboard' %}">My dashboard</a>
         </li>
         <li {% if section == "images" %} class="selected" {% endif %}>
-          <a href="#">Images</a>
+          <a href="{% url 'images:list' %}">Images</a>
         </li>
         <li {% if section == "people" %} class="selected" {% endif %}>
-          <a href="#">People</a>
+          <a href="{% url 'account_project:user_list' %}">People</a>
         </li>
       </ul>
     {% endif %}
